Shang New Live/src/objects/Daily_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>AP_2_Email__c</fullName>
        <label>Authorised Person 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AP_2_NRIC__c</fullName>
        <label>Authorised Person 2 NRIC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_2_Name__c</fullName>
        <label>Authorised Person 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_2_Phone__c</fullName>
        <label>Authorised Person 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AP_2_Position__c</fullName>
        <label>Authorised Person 2 Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_2_Sign_Img_Url__c</fullName>
        <label>Authorised Person 2 Signature Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_2_Signature__c</fullName>
        <formula>IF( ISBLANK(  AP_2_Sign_Img_Url__c ),&quot;&quot;, IMAGE(AP_2_Sign_Img_Url__c, &quot;AP Signature&quot;, 75, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorised Person 2 Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Manager&apos;s contact information.</inlineHelpText>
        <label>Authorised Person 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Daily_Authorised_Person2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AP_Email__c</fullName>
        <label>Authorised Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AP_NRIC__c</fullName>
        <label>Authorised Person NRIC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Name__c</fullName>
        <label>Authorised Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Phone__c</fullName>
        <label>Authorised Person Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AP_Position__c</fullName>
        <label>Authorised Person Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Sign_Img_Url__c</fullName>
        <label>Authorised Person Signature Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_Sign_Img__c</fullName>
        <formula>IF(ISBLANK(AP_Sign_Img_Url__c),&quot;&quot;, IMAGE( AP_Sign_Img_Url__c , &quot;Tenant Signature&quot; ,75,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorised Person Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contractor/Tenanct&apos;s contact information.</inlineHelpText>
        <label>Authorised Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Daily_Authorised_Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AWS ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Acceptance_of_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance of Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backend_Last_Updated_DateTime__c</fullName>
        <label>Backend Last Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipName>Daily_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Stamp_Image_Url__c</fullName>
        <label>Company Stamp Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Stamp__c</fullName>
        <formula>IF( ISBLANK( Company_Stamp_Image_Url__c ) ,&quot;&quot;, IMAGE(Company_Stamp_Image_Url__c, &quot;Company Stamp&quot;, 75,100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Stamp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <formula>Expected_Date__c  &gt;  Target_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Daily_Equipment_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <description>This is the date to be set by Operation users to plan the timeline. Based on the real timeline, Operation Users need to update Expected Date. This field will be used to check if the handover/takeover is delayed.</description>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <inlineHelpText>Last Updated DateTime at IOPS.</inlineHelpText>
        <label>Last Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Last updated at IOPS.</inlineHelpText>
        <label>Last Updated By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Daily_Last_Updated_By_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Updated_From__c</fullName>
        <label>Last Updated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipName>Daily_Handover_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Daily_Location_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Display__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mobile Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Module</label>
        <referenceTo>Mobile_Module__c</referenceTo>
        <relationshipName>Daily_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Completed_Items__c</fullName>
        <label>No of Completed Items</label>
        <summaryForeignKey>Daily_Checklist_Item__c.Daily_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PDF_Document_No__c</fullName>
        <label>PDF Document No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Url__c</fullName>
        <label>PDF Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2_Email__c</fullName>
        <label>Person In Charge 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIC_2_NRIC__c</fullName>
        <label>Person In Charge 2 NRIC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2_Name__c</fullName>
        <label>Person In Charge 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2_Phone__c</fullName>
        <label>Person In Charge 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PIC_2_Position__c</fullName>
        <label>Person In Charge 2 Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2_Sign_Img_Url__c</fullName>
        <label>Person In Charge 2 Signature Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2_Signature__c</fullName>
        <formula>IF( ISBLANK(  PIC_2_Sign_Img_Url__c ),&quot;&quot;, IMAGE(PIC_2_Sign_Img_Url__c, &quot;OIC Signature&quot;, 75, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person In Charge 2 Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Operation&apos;s contact information.</inlineHelpText>
        <label>Person In Charge 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Daily_Person_In_Charge2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIC_Email__c</fullName>
        <label>Person In Charge Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIC_NRIC__c</fullName>
        <label>Person In Charge NRIC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Name__c</fullName>
        <label>Person In Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Phone__c</fullName>
        <label>Person In Charge Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PIC_Position__c</fullName>
        <label>Person In Charge Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Sign_Img_Url__c</fullName>
        <label>Person In Charge Signature Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Signature__c</fullName>
        <formula>IF( ISBLANK( PIC_Sign_Img_Url__c ),&quot;&quot;, IMAGE(PIC_Sign_Img_Url__c , &quot;OIC Signature&quot;, 75, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person In Charge Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Operation&apos;s contact information.</inlineHelpText>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Daily_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Completed__c</fullName>
        <label>Percentage Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>IF(ISBLANK(Unit__r.Property__r.Name), Lease_Unit__r.Property__c ,Unit__r.Property__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Daily_Checklist_Session</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_Off_Date__c</fullName>
        <label>Signed Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_off__c</fullName>
        <formula>NOT(ISBLANK( Signed_Off_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated automatically when &apos;Signed Off Date&apos; is updated.</inlineHelpText>
        <label>Signed off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In-progress</fullName>
                    <color>#FFCC33</color>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33CC00</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>This is the date to be set by Operation Users at initial planning.</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipName>Daily_Takeover_UnitChecklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>no_of_items__c</fullName>
        <label>no of items</label>
        <summaryForeignKey>Daily_Checklist_Item__c.Daily_Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Daily Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Expected_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Delay__c</columns>
        <columns>Checklist_Master__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Mobile_Display__c</columns>
        <columns>Description__c</columns>
        <columns>Delay__c</columns>
        <columns>Equipment__c</columns>
        <columns>Lease_Unit__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllTakeoverChecklista</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Expected_Date__c</columns>
        <columns>Delay__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Takeover Checklist</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-DC-{000000}</displayFormat>
        <label>Daily Checklist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>